--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,23 +1,67 @@
 <navigation></navigation>
 <div class="container my-5">
+  <div class="d-flex flex-wrap justify-content-between my-3">
+    <div class="d-flex flex-wrap gap-3 my-md-3">
+      <button *ngFor="let jobTitle of jobTitlesUnique" (click)="toggleArray(jobTitle)" [ngClass]="{
+        'btn-primary': jobTitleInArray(jobTitle),
+        'btn-outline-primary': !jobTitleInArray(jobTitle)
+      }" class="btn" #jobTitle__btn>{{jobTitle}}</button>
+    </div>
+    <div class="search my-3">
+      <form class="d-flex" role="search">
+        <input #searchInput (input)="onInputChange()" class="form-control me-2" type="search" placeholder="Search"
+          aria-label="Search">
+      </form>
+    </div>
+  </div>
   <table class="table table-striped">
     <thead>
       <tr>
-        <th scope="col">Id</th>
+        <th scope="col">Id </th>
         <th scope="col">Ime</th>
         <th scope="col">Prezime</th>
         <th scope="col">Datum rođenja</th>
-        <th scope="col">Pozicija</th>
+        <th scope="col">Pozicija </th>
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let employee of employees">
-        <td scope="row">{{employee.id}}</td>
-        <td>{{employee.firstName}}</td>
-        <td>{{employee.lastName}}</td>
-        <td>{{(employee.dateOfBirth)}}</td>
-        <td>{{employee.jobTitle}}</td>
-      </tr>
+      <ng-container *ngFor="let employee of filteredEmployees">
+        <tr *ngIf="jobTitleInArray(employee.jobTitle) && showPagesEmployees(employee.id)">
+          <td scope="row">{{employee.id}}</td>
+          <td>{{employee.firstName}}</td>
+          <td>{{employee.lastName}}</td>
+          <td>{{(employee.dateOfBirth)}}</td>
+          <td>{{employee.jobTitle}}</td>
+        </tr>
+      </ng-container>
     </tbody>
   </table>
+
+  <div *ngIf="pageNum === 1 && totalEmployees()" class="d-flex justify-content-end my-3">
+    <button class="btn btn-primary" (click)="increasePage()">Sljedeća {{pageNum+1}}</button>
+  </div>
+
+  <div *ngIf="checkedPage()" class="d-flex justify-content-between my-3">
+    <button class="btn btn-primary" (click)="decreasePage()">Prethodna {{pageNum-1}}</button>
+    <button class="btn btn-primary" (click)="increasePage()">Sljedeća {{pageNum+1}}</button>
+  </div>
+
+  <div *ngIf="checkedLastPage() && totalEmployees()" class="d-flex justify-content-between my-3">
+    <button class="btn btn-primary" (click)="decreasePage()">Prethodna {{pageNum-1}}</button>
+  </div>
+
+  <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
+    <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" (click)="sortNames()">
+    <label class="btn btn-outline-primary" for="btnradio1">Sortiraj ime</label>
+
+    <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off" (click)="sortSurnames()">
+    <label class="btn btn-outline-primary" for="btnradio2">Sortiraj prezime</label>
+
+    <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off" (click)="sortJobTitle()">
+    <label class="btn btn-outline-primary" for="btnradio3">Sortiraj pozicija</label>
+
+    <input type="radio" class="btn-check" name="btnradio" id="btnradio4" autocomplete="off" (click)="sortNormal()"
+      checked>
+    <label class="btn btn-outline-primary" for="btnradio4">Normalno</label>
+  </div>
 </div>
